# AWS-RAG-System

./: .gitignore  Makefile  README.md  create_placeholder.py  docker-compose.yml  pyproject.toml  response.json
data/sample_docs/: aws-account-onboarding.md  database-backup-runbook.md  deployment-checklist.md  incident-response-playbook.md  server-restart-procedure.md  terraform-ec2-hcp-guide.md  vpn-troubleshooting.md
docs/: ARCHITECTURE.md  SETUP-AZURE.md  rag-chatbot.md
lambdas/: ingest_handler.py  query_handler.py  setup_handler.py
scripts/: ingest.py  package_lambdas.py  query.py  setup_pgvector.py
src/bot/: app.py  requirements.txt
src/common/: aws_clients.py  config.py  db.py
src/conversation_logging/: logger.py
src/ingestion/: chunker.py  embedder.py  loader.py  store.py
src/ingestion/parsers/: __init__.py  csv_parser.py  docx_parser.py  html_parser.py  markdown_parser.py  pdf_parser.py  pptx_parser.py  xlsx_parser.py
src/orchestrator/: agent.py
src/retrieval/: generator.py  search.py
src/router/: app.py  cards.py  sessions.py
src/sharepoint_sync/: sync.py
teams-app/: manifest.json
terraform/environments/dev/: main.tf  terraform.tfvars.example  variables.tf
terraform/modules/bedrock-kb/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/bot-service/: main.tf  outputs.tf  variables.tf
terraform/modules/router/: main.tf  outputs.tf  variables.tf
terraform/modules/sharepoint-sync/: main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_chunker.py  test_parsers.py
