[project]
name = "rag-knowledge-base"
version = "0.1.0"
description = "RAG Knowledge Platform — custom pipeline on AWS (Bedrock Claude + Titan embeddings, pgvector)"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "psycopg2-binary>=2.9",
    "pgvector>=0.3",
    "tiktoken>=0.7",
    "python-docx>=1.1",
    "pdfplumber>=0.11",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "python-dotenv>=1.0",
]
sync = [
    "msal>=1.28",
    "requests>=2.31",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
