[project]
name = "enterprise-rag-chatbot"
version = "1.0.0"
description = "Production RAG chatbot — indexes SharePoint docs, generates cited answers via Amazon Bedrock (Claude + Titan), serves through Microsoft Teams"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.36,<2",
    "psycopg2-binary>=2.9.10,<3",
    "pgvector>=0.3.6,<1",
    "tiktoken>=0.8,<1",
    "python-docx>=1.1.2,<2",
    "pdfplumber>=0.11.4,<1",
    "beautifulsoup4>=4.12.3,<5",
    "numpy>=2.0,<3",
    "openpyxl>=3.1,<4",
    "python-pptx>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "python-dotenv>=1.0",
]
sync = [
    "msal>=1.31,<2",
    "requests>=2.32,<3",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
